# flate2-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  MAINTENANCE.md  README.md  appveyor.yml  azure-pipelines.yml  cargo.mk
.github/: dependabot.yml
.github/workflows/: backend-regression.yml  cifuzz.yml  main.yml
ci/: azure-install-rust.yml  azure-job-test-all.yml
examples/: decompress_file.rs  deflatedecoder-bufread.rs  deflatedecoder-read.rs  deflatedecoder-write.rs  deflateencoder-read.rs  deflateencoder-write.rs  gzbuilder.rs  gzdecoder-bufread.rs  gzdecoder-read.rs  gzdecoder-write.rs  gzencoder-read.rs  gzencoder-write.rs  gzmultidecoder-bufread.rs  gzmultidecoder-read.rs  zlibdecoder-bufread.rs  zlibdecoder-read.rs  zlibdecoder-write.rs  zlibencoder-read.rs  zlibencoder-write.rs
flate2-crc/: Cargo.toml  build.rs
flate2-crc/benches/: run.rs
flate2-crc/src/: lib.rs  other.rs  x86.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_gz_roundtrip.rs
miniz-sys/: Cargo.toml  build.rs  lib.rs  miniz.c  miniz.h
src/: bufreader.rs  crc.rs  deflate.rs  ffi.rs  gz.rs  lib.rs  mem.rs  raw.rs  stream.rs  util.rs  zio.rs  zlib.rs
src/deflate/: bufread.rs  mod.rs  read.rs  write.rs
src/ffi/: c.rs  fdeflate.rs  miniz_oxide.rs  mod.rs  rust.rs  zlib_rs.rs
src/gz/: bufread.rs  mod.rs  read.rs  write.rs
src/tokio2/: mod.rs  zio.rs
src/tokio2/deflate/: bufread.rs  mod.rs  read.rs  write.rs
src/tokio2/gz/: bufread.rs  read.rs  write.rs
src/tokio2/zlib/: bufread.rs  read.rs  write.rs
src/zlib/: bufread.rs  mod.rs  read.rs  write.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: async-deflate.rs  async-reader.rs  backend-regression-bench.rs  capabilities.rs  corrupt-file.gz.hex  decompress_chunk.rs  early-flush.rs  empty-read.rs  fdeflate.rs  gunzip.rs  tokio.rs  zero-write.rs  zlib-rs-capabilities.rs
tests/support/: backend-regression-driver.rs
