[package]

name = "flate2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "1.0.11"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["gzip", "flate", "zlib", "encoding"]
categories = ["compression", "api-bindings"]
repository = "https://github.com/alexcrichton/flate2-rs"
homepage = "https://github.com/alexcrichton/flate2-rs"
documentation = "https://docs.rs/flate2"
description = """
Bindings to miniz.c for DEFLATE compression and decompression exposed as
Reader/Writer streams. Contains bindings for zlib, deflate, and gzip-based
streams.
"""

[workspace]
members = ['systest']

[dependencies]
libc = "0.2"
miniz-sys = { path = "miniz-sys", version = "0.1.11", optional = true }
libz-sys = { version = "1.0", optional = true }
tokio-io = { version = "0.1.11", optional = true }
futures = { version = "0.1.25", optional = true }
miniz_oxide = { version = "0.3.2", optional = true}
crc32fast = "1.1"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
miniz_oxide = "0.3.2"

[dev-dependencies]
rand = "0.7"
quickcheck = { version = "0.8", default-features = false }
tokio-io = "0.1.11"
tokio-tcp = "0.1.3"
tokio-threadpool = "0.1.10"
futures = "0.1"

[features]
default = ["miniz-sys"]
zlib = ["libz-sys"]
rust_backend = ["miniz_oxide"]
tokio = ["tokio-io", "futures"]

[badges]
travis-ci = { repository = "alexcrichton/flate2-rs" }
appveyor = { repository = "alexcrichton/flate2-rs" }
