[package]
name = "flate2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Josh Triplett <josh@joshtriplett.org>"]
version = "1.0.20"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["gzip", "deflate", "zlib", "zlib-ng", "encoding"]
categories = ["compression", "api-bindings"]
repository = "https://github.com/rust-lang/flate2-rs"
homepage = "https://github.com/rust-lang/flate2-rs"
documentation = "https://docs.rs/flate2"
description = """
DEFLATE compression and decompression exposed as Read/BufRead/Write streams.
Supports miniz_oxide, miniz.c, and multiple zlib implementations. Supports
zlib, gzip, and raw deflate streams.
"""

[workspace]
members = ['systest']

[dependencies]
libc = "0.2.65"
cfg-if = "1.0.0"
miniz-sys = { path = "miniz-sys", version = "0.1.11", optional = true }
libz-sys = { version = "1.1.0", optional = true, default-features = false }
cloudflare-zlib-sys = { version = "0.2.0", optional = true }
tokio-io = { version = "0.1.11", optional = true }
futures = { version = "0.1.25", optional = true }
miniz_oxide = { version = "0.4.0", optional = true, default-features = false }
crc32fast = "1.2.0"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
miniz_oxide = { version = "0.4.0", default-features = false }

[dev-dependencies]
rand = "0.7"
quickcheck = { version = "0.9", default-features = false }
tokio-io = "0.1.11"
tokio-tcp = "0.1.3"
tokio-threadpool = "0.1.10"
futures = "0.1"

[features]
default = ["rust_backend"]
any_zlib = [] # note: this is not a real user-facing feature
zlib = ["any_zlib", "libz-sys"]
zlib-ng-compat = ["zlib", "libz-sys/zlib-ng"]
cloudflare_zlib = ["any_zlib", "cloudflare-zlib-sys"]
rust_backend = ["miniz_oxide"]
tokio = ["tokio-io", "futures"]
