[package]
name = "flate2-crc"
version = "0.1.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/flate2-rs/tree/flate2-crc"
homepage = "https://github.com/alexcrichton/flate2-rs"
documentation = "https://docs.rs/flate2-crc"
description = """
SIMD acceleration for CRC-32 checksums used in the gzip format

**Deprecated in favor of the `crc32fast` crate**
"""

[dependencies]
cfg-if = "0.1.6"

[dev-dependencies]
miniz-sys = { path = '../miniz-sys', version = '0.1' }
rand = "0.6"
libz-sys = "1.0"
rayon = "1.0.3"
quickcheck = "0.7"
