[package]

name = "miniz-sys"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "miniz"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/flate2-rs"
description = """
Bindings to the miniz.c library.
"""

[lib]
name = "miniz-sys"
path = "lib.rs"

[dependencies]
libc = "0.1"

[build-dependencies]
gcc = "0.1"
