[package]

name = "miniz-sys"
version = "0.1.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "miniz"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/flate2-rs"
description = """
Bindings to the miniz.c library.
"""

[lib]
name = "miniz_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
